--- a/less/widgets/contact.less
+++ b/less/widgets/contact.less
@@ -21,11 +21,11 @@
 		background-image: url(assets/svg/widgets-sprite.svg);
 	}
 	p.person-phone {
-		background-position: 0 2px;
+		background-position: 0 -30px;
 	}
 	a.person-email {
 		color: inherit;
-		background-position: 0 -30px;
+		background-position: 0 1px;
 	}
 
 
